--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,9 +1,9 @@
 <ion-side-menus enable-menu-with-back-views="false">
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-positive">
-      <h1 class="title">Menu</h1>
-    </ion-header-bar>
+    <!--<ion-header-bar class="bar-positive">-->
+      <!--<h1 class="title">Menu</h1>-->
+    <!--</ion-header-bar>-->
 
     <ion-content> <!-- ion-content can set content inside it below the ion-header-bar -->
       <ion-list>
@@ -36,13 +36,37 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-search">
+        <button class="button button-icon button-clear ion-search" menu-toggle="right">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-nav-view name="content"></ion-nav-view>
-
   </ion-side-menu-content>
+
+  <ion-side-menu side="right">
+    <ion-content> <!-- ion-content can set content inside it below the ion-header-bar -->
+      <ion-list>
+        <ion-item menu-close ui-sref="app.headline">
+          Headlines
+        </ion-item>
+        <ion-item menu-close ui-sref="app.category">
+          Categories
+        </ion-item>
+        <ion-item menu-close ui-sref="app.bookmark">
+          Bookmarks
+        </ion-item>
+        <ion-item menu-close ui-sref="app.submit">
+          Submit story
+        </ion-item>
+        <ion-item menu-close ui-sref="app.setting">
+          Settings
+        </ion-item>
+        <ion-item menu-close ui-sref="app.logout">
+          Log out
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-side-menu>
 
 </ion-side-menus>
